# gestionexcursiones

./: CMakeLists.txt  excursiones.txt
src/: CMakeLists.txt  main.cpp
src/controller/: ExcursionController.cpp  ExcursionController.hpp
src/model/: Excursion.cpp  Excursion.hpp  Federacion.cpp  Federacion.hpp  Inscripciones.cpp  Inscripciones.hpp  Seguro.cpp  Seguro.hpp  Socio.cpp  Socio.hpp  SocioEstandar.cpp  SocioEstandar.hpp  SocioFederado.cpp  SocioFederado.hpp  SocioInfantil.cpp  SocioInfantil.hpp
src/view/: .ninja_deps  .ninja_log  VistaEscursion.cpp
tests/: CMakeLists.txt  main.cpp
tests/model/: ExcursionTest.cpp
